[gd_scene load_steps=24 format=3 uid="uid://snk0p1unhn2g"]

[ext_resource type="Script" path="res://Scripts/minerals.gd" id="1_2u6xu"]
[ext_resource type="Texture2D" uid="uid://dv3nful3du6d2" path="res://Assets/Sprites/Items/Minerals/Raw/Rock/rock1.png" id="1_82c1e"]
[ext_resource type="Texture2D" uid="uid://3d0qmeakgkx3" path="res://Assets/Sprites/Items/Minerals/Raw/Rock/rock2.png" id="2_6a0g8"]
[ext_resource type="Texture2D" uid="uid://fnd8u6t8p5l4" path="res://Assets/Sprites/Items/Minerals/Raw/Gold/gold_raw1.png" id="2_phrpg"]
[ext_resource type="Texture2D" uid="uid://38alltkxoqum" path="res://Assets/Sprites/Items/Minerals/Raw/Rock/rock3.png" id="3_5ed7c"]
[ext_resource type="Texture2D" uid="uid://do11d6dwxte4m" path="res://Assets/Sprites/Items/Minerals/Raw/Gold/gold_raw2.png" id="3_soolu"]
[ext_resource type="Texture2D" uid="uid://dppyw6gbq5dx8" path="res://Assets/Sprites/Items/Minerals/Raw/Gold/gold_raw3.png" id="4_fk6mx"]
[ext_resource type="Texture2D" uid="uid://mv3mdeqk7u38" path="res://Assets/Sprites/Items/Minerals/Raw/Rock/rock4.png" id="4_wrj05"]
[ext_resource type="Texture2D" uid="uid://p6a6fl16yaug" path="res://Assets/Sprites/Items/Minerals/Raw/Gold/gold_raw4.png" id="5_0nbqg"]
[ext_resource type="Texture2D" uid="uid://csung7ucc3yya" path="res://Assets/Sprites/Items/Minerals/Raw/Gold/gold_raw5.png" id="6_56n5b"]
[ext_resource type="Texture2D" uid="uid://bfla3hbetjc0a" path="res://Assets/Sprites/Items/Minerals/Raw/Gold/gold_raw6.png" id="7_gbqim"]
[ext_resource type="Texture2D" uid="uid://cnm8atmdg3rli" path="res://Assets/Sprites/Items/Minerals/Raw/Malachite/malachite1.png" id="8_lorwb"]
[ext_resource type="Texture2D" uid="uid://bp5hirtppl8vk" path="res://Assets/Sprites/Items/Minerals/Raw/Malachite/malachite2.png" id="9_ek5se"]
[ext_resource type="Texture2D" uid="uid://d0d80otluymo3" path="res://Assets/Sprites/Items/Minerals/Raw/Malachite/malachite3.png" id="10_lbf4c"]
[ext_resource type="Texture2D" uid="uid://co5172kgdfkkf" path="res://Assets/Sprites/Items/Minerals/Raw/Malachite/malachite4.png" id="11_6scif"]
[ext_resource type="Texture2D" uid="uid://blx15hr22gsdq" path="res://Assets/Sprites/Items/Minerals/Raw/Malachite/malachite5.png" id="12_36w3j"]
[ext_resource type="Texture2D" uid="uid://5bndsr1wufah" path="res://Assets/Sprites/Items/Minerals/Raw/Malachite/malachite6.png" id="13_4j15e"]
[ext_resource type="Texture2D" uid="uid://dhper5cguah3e" path="res://Assets/Sprites/Items/Minerals/Raw/Malachite/malachite7.png" id="14_sgblx"]
[ext_resource type="Texture2D" uid="uid://pmuipladpxq4" path="res://Assets/Sprites/Items/Minerals/Raw/Malachite/malachite8.png" id="15_0l6ik"]
[ext_resource type="Texture2D" uid="uid://bkfj6qebs5wa3" path="res://Assets/Sprites/block_error.png" id="16_sfije"]

[sub_resource type="SpriteFrames" id="SpriteFrames_u5kso"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_phrpg")
}, {
"duration": 1.0,
"texture": ExtResource("3_soolu")
}, {
"duration": 1.0,
"texture": ExtResource("4_fk6mx")
}, {
"duration": 1.0,
"texture": ExtResource("5_0nbqg")
}, {
"duration": 1.0,
"texture": ExtResource("6_56n5b")
}, {
"duration": 1.0,
"texture": ExtResource("7_gbqim")
}],
"loop": false,
"name": &"gold",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_lorwb")
}, {
"duration": 1.0,
"texture": ExtResource("9_ek5se")
}, {
"duration": 1.0,
"texture": ExtResource("10_lbf4c")
}, {
"duration": 1.0,
"texture": ExtResource("11_6scif")
}, {
"duration": 1.0,
"texture": ExtResource("12_36w3j")
}, {
"duration": 1.0,
"texture": ExtResource("13_4j15e")
}, {
"duration": 1.0,
"texture": ExtResource("14_sgblx")
}, {
"duration": 1.0,
"texture": ExtResource("15_0l6ik")
}],
"loop": false,
"name": &"malachite",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_sfije")
}],
"loop": true,
"name": &"nothing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_82c1e")
}, {
"duration": 1.0,
"texture": ExtResource("2_6a0g8")
}, {
"duration": 1.0,
"texture": ExtResource("3_5ed7c")
}, {
"duration": 1.0,
"texture": ExtResource("4_wrj05")
}],
"loop": false,
"name": &"rock",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qvxd0"]
radius = 27.2947

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0fxc"]
size = Vector2(27, 11)

[node name="Ressourses" type="Node2D" groups=["Ores"]]
visibility_layer = 2
script = ExtResource("1_2u6xu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visibility_layer = 2
y_sort_enabled = true
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_u5kso")
animation = &"gold"
offset = Vector2(0, -9)

[node name="CollactableZone" type="Area2D" parent="AnimatedSprite2D"]
visibility_layer = 2
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/CollactableZone"]
visibility_layer = 2
shape = SubResource("CircleShape2D_qvxd0")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visibility_layer = 2
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visibility_layer = 2
position = Vector2(-0.5, 3.5)
shape = SubResource("RectangleShape2D_g0fxc")

[node name="RespawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="AnimatedSprite2D/CollactableZone" to="." method="_on_collactable_zone_body_entered"]
[connection signal="body_exited" from="AnimatedSprite2D/CollactableZone" to="." method="_on_collactable_zone_body_exited"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_timer_timeout"]
